<resources>
    <string name="app_name">반쪽이 공방</string>

    <string name="naver_client_id" translatable="false">XhmXptV7PpE7X_2Zp7lw</string>
    <string name="naver_client_secret" translatable="false">WB43Gka_2U</string>
    <string name="naver_client_name" translatable="false">handicraft</string>


    <string-array name="tab_name">
        <item>증강현실</item>
        <item>스케쥴</item>
        <item>가구공유</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_workshop">반쪽이 공방</string>
    <string name="nav_workshop_intro">공방 소개</string>
    <string name="nav_workshop_master">사장님 소개</string>

    <string name="action_settings">Settings</string>

    <string name="master_default_name">김공방</string>

    <!-- sing in -->
    <string name="welcome1">누구나 할 수 있는 DIY 가구 만들기</string>
    <string name="welcome2">함께하는, 즐거운 만들기 공방</string>

    <!-- master profile -->
    <string name="master_intro_label">about master</string>
    <string name="mobile_label">mobile</string>
    <string name="work_label">work</string>
    <string name="email_label">email</string>
    <string name="instagram_label">instagram</string>

    <string name="master_instagram_url">https://www.instagram.com/keonheekk/</string>


    <!-- furniture detail -->
    <string name="furniture_toolbar_title">가구 정보</string>

    <!-- furniture map -->
    <string name="furniture_map_toolbar_title">거래 지역</string>

    <!-- furniture add -->
    <string name="furniture_add_toolbar_title">가구 등록</string>

    <string name="furniture_add_desc_label">상품 정보</string>
    <string name="furniture_add_detail_desc_label">상세 정보</string>

    <string name="furniture_add_title_label">상품명</string>
    <string name="furniture_add_price_label">가격</string>
    <string name="furniture_add_state_label">가구 상태</string>
    <string name="furniture_add_trade_label">거래 형태</string>

    <string name="furniture_add_brand_label">브랜드</string>
    <string name="furniture_add_type_label">종류</string>
    <string name="furniture_add_period_label">사용기간</string>
    <string name="furniture_add_size_label">크기</string>
    <string name="furniture_add_detail_label">상세설명</string>
    <string name="furniture_add_location_label">거래지역</string>

    <string name="furniture_add_title_hint">가구의 이름을 적어주세요</string>
    <string name="furniture_add_price_hint">가구의 가격을 적어주세요</string>
    <string name="furniture_add_touch_hint">이곳을 터치해주세요</string>

    <string name="furniture_add_brand_hint">가구의 브랜드를 적어주세요</string>
    <string name="furniture_add_type_hint">어떤 종류의 가구인지 적어주세요</string>
    <string name="furniture_add_desc_hint">자세한 설명을 적어주세요</string>
    <string name="furniture_add_location_hint">거래지역</string>


    <string name="furniture_add_btn_label">등록완료</string>
    <string name="furniture_preview_btn_label">미리보기</string>

    <string-array name="state_rank">
        <item>새것</item>
        <item>새것+하자있음</item>
        <item>거의 새것</item>
        <item>중고</item>
        <item>중고+하자있음</item>
    </string-array>

    <string-array name="trade_type">
        <item>팝니다</item>
        <item>가져가세요</item>
    </string-array>

    <!-- furniture preview -->
    <string name="furniture_preview_toolbar_title">미리보기</string>

    <!-- introduction tab -->
    <string-array name="tab_info">
        <item>이용안내</item>
        <item>오시는 길</item>
    </string-array>

    <!-- content introduction -->
    <string name="workshop_content"> 회원제로 운영되는 공방입니다.\n회원 가입의 문은 항상 열려
        있습니다.\n따라서 회원이 되시면 영구히 공방 회원으로서 공방을 내것처럼 마음대로 이용 하실
        수 있습니다.\n이용시간은 오전 10시~저녁9시, 매주 월요일을 제외하고 정해진 시간없이 회원이
        편한 시간에 자유롭게 이용가능합니다.</string>

    <string name="class_content"> 이론교육, 기초과정 지루하고 큰 의미는 없죠?\n회원가입 하시면 별도의
        교육 없이 첫번째 작품을 선정하시고 바로 시작합니다.\n처음부터 개별지도를 통해 차근차근 작업을
        진행합니다.\n필요한 이론이나 정보도 작업하면서 습득 할 수 있습니다.</string>

    <string name="work_content"> 원하시는 작품을 자유롭게 만드실 수 있습니다.\n회원은 구상하고 도면은
        공방에서 작성합니다.\n작품제작 초반에는 1:1 개인지도가 수시로 진행되다가 숙련이 되면 점차 스스로
        만드실 수 있게 됩니다.\n이후에도 제작에 필요한 사항은 항상 알려드립니다.</string>

    <string name="price_content"> 가구의 크기, 나무의 종류, 부품, 채색 등에 따른 재료비를 지불하시면 됩니다.\n스케치나
        도면에 따라 공방에서 목재재단을 해드리면 제작을 하신 후 소요량에 따라산정됩니다.</string>

    <string name="time_content"> 평일       : 오전10:00 ~ 오후9:00\n토요일,일요일   : 오전 10:00 ~ 오후7:00\n월요일
        (매주)    : 공방휴일 (전화문의는 가능합니다)</string>

    <string name="material_content"> 친환경적이며 다루기 쉬운 집성목(천연원목을 가구용으로 집성)과 친환경 페인트,
        마감재등 건강에 유익한 재료를 사용합니다.\n홍송, 스프러스, 편백나무(히노끼), 삼나무, 물푸레나무(애쉬),
        오크등 다양한 종류의 집성목이 있습니다.\n그 외 오동나무, 자작나무, 미송 등의 다양한 가구용 합판재가 사용됩니다.\n
MDF 등 유해성 재료는 사용하지 않습니다.</string>

    <string name="order_content"> 회원 활동을 할 시간적 여건이 안 되거나 직접 제작하는 것을
        좋아하지 않는 분이라도 필요한 가구나 소품을 공방에서 제작해 드립니다.\n사전에 참고 자료를
        충분히 교환 하거나 직접 상담을 통해 가구의 종류, 형태, 색상 등을 확정하고 제작합니다.\n</string>

    <!-- fragment directions -->
    <string name="directions_content">마을버스 520번(인천터미널,신세계백화점 노선), 518번(주안역 노선) 은
             공방 앞까지 연결 됩니다.\n다른 지역에서 오실 경우는 부득이 갈아타셔야 하는데 인하대,
             법원,검찰청,학익시장앞 근처까지 오시면 공방과 멀지 않습니다.\n네비게이션은 남구
              학익동705-18로 찍으세요. 더 가깝게 유도 됩니다.</string>


</resources>
