<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="kr.co.landvibe.handicraft.masterProfile.MasterProfileActivity"
        tools:showIn="@layout/activity_master_profile"
        tools:ignore="MissingPrefix"
        >


        <ImageView
            android:id="@+id/iv_master_intro_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/tv_master_intro_label"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_master_intro_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master_intro_label"
            android:textSize="14sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="81dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/tv_master_intro"
            android:layout_width="282dp"
            android:layout_height="36dp"
            android:text="김건희, 27세\인하대학교 컴퓨터공학과 3학년"
            android:textSize="16sp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_master_intro_label"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_master_intro_label"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0" />

        <View
            android:id="@+id/divider0"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/grayLight2"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_master_intro"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_master_intro" />

        <ImageView
            android:id="@+id/iv_phone_number_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:src="@drawable/ic_phone_black_24dp"
            app:layout_constraintTop_toTopOf="@+id/tv_mobile"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="81dp"
            android:layout_marginTop="20dp"
            android:text="010-xxxx-xxxx"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="81dp"
            app:layout_constraintTop_toBottomOf="@+id/divider0" />

        <TextView
            android:id="@+id/tv_mobile_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_mobile"
            android:text="@string/mobile_label"
            android:textSize="14sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile"
            />

        <ImageView
            android:id="@+id/iv_btn_mobile_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/speech_bubble"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_mobile"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:text="010-xxxx-xxxx"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_mobile"
            app:layout_constraintRight_toRightOf="@+id/tv_mobile"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_label"
            android:layout_marginStart="8dp" />

        <TextView
            android:id="@+id/tv_work_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work_label"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_work"
            app:layout_constraintLeft_toLeftOf="@+id/tv_work" />

        <ImageView
            android:id="@+id/iv_btn_work_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/speech_bubble"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/iv_btn_mobile_icon"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="@+id/tv_work"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp" />
        
        <View
            android:id="@+id/divider1"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_work_label"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@color/grayLight2"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_mobile"
            app:layout_constraintHorizontal_bias="0.0" />

        <ImageView
            android:id="@+id/iv_email_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_mail_black_24dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="abcd@google.com"
            android:textSize="16sp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_mobile"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <TextView
            android:id="@+id/tv_email_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_email" />

        <ImageView
            android:id="@+id/iv_btn_email_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_email"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/iv_btn_work_icon"
            app:layout_constraintHorizontal_bias="0.0" />

        <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/grayLight2"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_label"
            android:layout_marginLeft="-10dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_email_label" />

        <ImageView
            android:id="@+id/iv_instagram_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/instagram"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_instagram"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/tv_instagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="keonheekk"
            android:textSize="16sp"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_email"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/tv_instagram_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instagram_label"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instagram"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_instagram" />

        <ImageView
            android:id="@+id/iv_btn_instagram_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_send_black_24dp"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/iv_btn_email_icon"
            app:layout_constraintTop_toTopOf="@+id/tv_instagram"
            android:layout_marginTop="8dp" />

        <View
            android:id="@+id/divider3"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/grayLight2"
            android:layout_marginLeft="-14dp"
            app:layout_constraintLeft_toLeftOf="@+id/tv_instagram_label"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_instagram_label" />



    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>